WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194008
REGRESSION(
r239915
): css3/font-feature-font-face-local.html failing on WPE
https://bugs.webkit.org/show_bug.cgi?id=194008
Summary
REGRESSION(r239915): css3/font-feature-font-face-local.html failing on WPE
Zan Dobersek
Reported
2019-01-29 23:26:40 PST
css3/font-feature-font-face-local.html reftest has been failing since
r239915
landed.
https://trac.webkit.org/changeset/239915/webkit
The two output images differ in a space character (it not being emitted in the baseline).
Attachments
Patch
(3.54 KB, patch)
2019-02-01 06:25 PST
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-02-01 06:25:59 PST
Created
attachment 360860
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-02-01 06:36:37 PST
Committed
r240848
: <
https://trac.webkit.org/changeset/240848
>
Radar WebKit Bug Importer
Comment 3
2019-02-01 06:37:27 PST
<
rdar://problem/47734623
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug