REGRESSION(r239915): css3/font-feature-font-face-local.html failing on WPE https://bugs.webkit.org/show_bug.cgi?id=194008

Reviewed by Žan Doberšek.

Source/WebCore:

We need to replace control characters with zero width space too.

* platform/graphics/freetype/GlyphPageTreeNodeFreeType.cpp:
(WebCore::GlyphPage::fill):
* platform/text/CharacterProperties.h:
(WebCore::isControlCharacter):

LayoutTests:

Remove test expectation.

* platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/208621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240848 268f45cc-cd09-0410-ab3c-d52691b4dbfc